--- a/guessGame.css
+++ b/guessGame.css
@@ -20,6 +20,11 @@ body{
 h1{
     color:white;
 }
-span{
-    color:white;
+
+#stripe {
+    background: white;
+    height:30px;
+    text-align: center;
+    color:black;
+
 }
