--- a/guessGame.css
+++ b/guessGame.css
@@ -1,5 +1,7 @@
 body{
     background-color: #232323;
+    margin: 0;
+    font-family: "Montserrat","Avenir";
 
 }
 .square{
@@ -8,17 +10,26 @@ body{
     padding-bottom: 30%;
     float:left;
     margin:1.66%;
+    border-radius:15%;
+    transition: background 0.6s;
 
 }
 
 #container{
     max-width: 600px;
-    margin: 0 auto;
+    margin: 20px auto;
 
 }
 
 h1{
     color:white;
+    text-align: center;
+    background: mediumspringgreen;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    padding: 20px 0;
+
 }
 
 #stripe {
@@ -27,4 +38,32 @@ h1{
     text-align: center;
     color:black;
 
+}
+#colorDisplay{
+    font-size: 200%;
+}
+.selected{
+    background-color: mediumspringgreen;
+}
+
+button{
+    border:none;
+    background:none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color:forestgreen ;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    outline: none;
+}
+#message{
+    display: inline-block;
+    width:20%;
+}
+
+button:hover {
+    color:white;
+    background: mediumspringgreen;
 }
